# ConsoleChat

./: README.md  pyproject.toml
Client/: Program.cs
Server/: Program.cs  Server.cs  ServerHub.cs
Server/Properties/: launchSettings.json
console_chat/: client.py  server.py
console_chat/clients/: client.py
